[package]
name = "pp"
version = "0.1.0"
authors = ["范辉 <fanhui.x@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
lazy_static = "1.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

ppserver_def = { path = "../server_def" }
pprexec = { path = "../rexec", default-features = false, features = [ "client" ] }
myutil = { git = "https://gitee.com/kt10/myutil.git", branch = "master" }
