[package]
name = "ttrexec"
version = "0.2.10"

edition = "2018"
authors = ["FanHui <fanhui.x@gmail.com>", "FanHui <hui.fan@mail.ru>"]
description = "Lightweight private cloud solution for SME scenarios."
license = "MIT OR Apache-2.0"
keywords = ["openstack", "k8s", "kvm", "cloud"]
categories = ["command-line-utilities"]
homepage = "https://github.com/ktmlm/TTstack"
repository = "https://github.com/ktmlm/TTstack.git"

[dependencies]
nix = "0.18"
clap = "2.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jemallocator = { optional = true, version = "0.3.2" }
myutil = "0.2"

[features]
default = [ "server", "client" ]
server = [ "jemallocator" ]
client = []

[[bin]]
name = "ttrexec-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "ttrexec-cli"
path = "src/bin/cli.rs"
